--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -7,6 +7,8 @@
   color: white;
   text-align: center;
   font-size: 0.9rem;
+  position: absolute;
+  top: 1920px;
 }
 
 .custom-footer.full-width {
