--- a/frontend/src/components/Tabs/Tabs.css
+++ b/frontend/src/components/Tabs/Tabs.css
@@ -39,7 +39,7 @@
   }
 
 .tab-content {
-  max-height: 100%; /* or set a fixed height like 400px if needed */
+  max-height: 1250px; /* or set a fixed height like 400px if needed */
   overflow-y: auto;
   overflow-x: hidden;
 }
